fixed weird (minor) spacing error

--- a/frequent-fliers-html/sign-up-styles.css
+++ b/frequent-fliers-html/sign-up-styles.css
@@ -194,10 +194,7 @@ button:hover {
         width: 100%;
         max-width: 200px;
     }
-
-    .event-form {
-        margin-top: 60vh;
-    }
+    
 }
 .help-button {
 
